created first version

--- a/index.html
+++ b/index.html
@@ -5,7 +5,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Document</title>
+    <title>Reibun Share</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <nav>
+        <div class="logo">
+          <img src="./images/logo-img-symmetrical.svg" alt="logo" />
+          <span><span class="font-green">Reibun</span>Share</span>
+        </div>
+
+        <ul>
+          <li><a href="#">Menu1</a></li>
+          <li><a href="#">Menu2</a></li>
+          <li><a href="#">Menu3</a></li>
+          <div class="btn">Get Started</div>
+        </ul>
+      </nav>
+
+      <header>
+        <div>
+          <h1>
+            Find the <span class="font-green">native expressions</span> and Make
+            life <span class="font-green">easier</span>
+          </h1>
+
+          <div class="btn">Get Started</div>
+        </div>
+
+        <img src="./images/undraw_chilling_re_4iq9 1.svg" alt="chilling" />
+      </header>
+
+      <section class="main-concept">
+        <img src="./images/logo-img-symmetrical.svg" alt="logo" />
+        <p>
+          I have studied English words for long time with vocabulary books but
+          it it difficult to remember all of them since vocabulary is too many.
+        </p>
+        <p>
+          the example sentences vocabulary books have are sometimes useful , but
+          many sentence is not useful in daily conversation.
+        </p>
+        <p>
+          Sometimes I tried to create my own sentence for each words to memorize
+          easily, but I thought I wish I could see the sentence the native
+          speaker made.
+        </p>
+        <p>this app should help to solve this kind of problem.</p>
+      </section>
+
+      <section class="logo-concept">
+        <div>
+          <img src="./images/undraw_happy_music_g6wc 1.svg" alt="bird" />
+          <p>
+            share the sentence for other leaner like
+            <span class="font-green">birds</span>
+          </p>
+        </div>
+        <div>
+          <img src="./images/undraw_books_re_8gea.svg" alt="book" />
+          <p>
+            Adding the vocaburaly to your
+            <span class="font-green">book</span>
+          </p>
+        </div>
+        <div>
+          <img src="./images/beads.svg" alt="beads" />
+          <p>
+            memorize by linking with sentence like
+            <span class="font-green">beeds</span>
+          </p>
+        </div>
+      </section>
+    </div>
+    <footer>Copyright © 2022 Yuya Satake</footer>
+  </body>
 </html>
