did some style adjustment for logo concept

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       </section>
 
       <section class="logo-concept">
+        <!-- <h2>Main conept</h2> -->
         <div>
           <img src="./images/undraw_happy_music_g6wc 1.svg" alt="bird" />
           <p>
