added 'how can i use' section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </section>
 
       <section class="logo-concept">
-        <!-- <h2>Main conept</h2> -->
+        <h2 class="section-title">Main conept</h2>
         <div>
           <img src="./images/undraw_happy_music_g6wc 1.svg" alt="bird" />
           <p>
@@ -76,6 +76,92 @@
             memorize by linking with sentence like
             <span class="font-green">beeds</span>
           </p>
+        </div>
+      </section>
+
+      <section class="how-can-you-use">
+        <h2 class="section-title">How can you use?</h2>
+        <div class="grid-container">
+          <div>
+            <div class="content">
+              <div>
+                <img src="./images/find-replace.svg" alt="find" />
+                <h3>register the words</h3>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+                ipsam, architecto perspiciatis at dolores in quos deleniti.
+                Delectus, aut minus! Nobis dignissimos nam natus tempore fugit?
+                Obcaecati nam impedit doloremque!
+              </p>
+            </div>
+            <div class="content">
+              <div>
+                <img src="./images/find-replace.svg" alt="find" />
+                <h3>register the words</h3>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+                ipsam, architecto perspiciatis at dolores in quos deleniti.
+                Delectus, aut minus! Nobis dignissimos nam natus tempore fugit?
+                Obcaecati nam impedit doloremque!
+              </p>
+            </div>
+            <div class="content">
+              <div>
+                <img src="./images/find-replace.svg" alt="find" />
+                <h3>register the words</h3>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+                ipsam, architecto perspiciatis at dolores in quos deleniti.
+                Delectus, aut minus! Nobis dignissimos nam natus tempore fugit?
+                Obcaecati nam impedit doloremque!
+              </p>
+            </div>
+          </div>
+
+          <div>
+            <img src="./images/iphone.svg" alt="iphone" />
+          </div>
+          <div>
+            <div class="content">
+              <div>
+                <img src="./images/find-replace.svg" alt="find" />
+                <h3>register the words</h3>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+                ipsam, architecto perspiciatis at dolores in quos deleniti.
+                Delectus, aut minus! Nobis dignissimos nam natus tempore fugit?
+                Obcaecati nam impedit doloremque!
+              </p>
+            </div>
+            <div class="content">
+              <div>
+                <img src="./images/find-replace.svg" alt="find" />
+                <h3>register the words</h3>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+                ipsam, architecto perspiciatis at dolores in quos deleniti.
+                Delectus, aut minus! Nobis dignissimos nam natus tempore fugit?
+                Obcaecati nam impedit doloremque!
+              </p>
+            </div>
+            <div class="content">
+              <div>
+                <img src="./images/find-replace.svg" alt="find" />
+                <h3>register the words</h3>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+                ipsam, architecto perspiciatis at dolores in quos deleniti.
+                Delectus, aut minus! Nobis dignissimos nam natus tempore fugit?
+                Obcaecati nam impedit doloremque!
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </div>
