fix style and added favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg" />
     <link rel="stylesheet" href="./css/main.css" />
     <title>Reibun Share</title>
   </head>
@@ -59,7 +60,7 @@
         <div>
           <img src="./images/undraw_happy_music_g6wc 1.svg" alt="bird" />
           <p>
-            share the sentence for other leaner like
+            share the sentence for other leaner like messenger
             <span class="font-green">birds</span>
           </p>
         </div>
