modify 'how to use' section's content title

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="content">
               <div>
                 <img src="./images/find-replace.svg" alt="find" />
-                <h3>register the words</h3>
+                <h3>post the sentences</h3>
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
@@ -111,7 +111,7 @@
             <div class="content">
               <div>
                 <img src="./images/find-replace.svg" alt="find" />
-                <h3>register the words</h3>
+                <h3>filter width languages and dialects</h3>
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
@@ -129,7 +129,7 @@
             <div class="content">
               <div>
                 <img src="./images/find-replace.svg" alt="find" />
-                <h3>register the words</h3>
+                <h3>add vocabulary to your book</h3>
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
@@ -141,7 +141,7 @@
             <div class="content">
               <div>
                 <img src="./images/find-replace.svg" alt="find" />
-                <h3>register the words</h3>
+                <h3>favorite the useful sentences</h3>
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
@@ -153,7 +153,7 @@
             <div class="content">
               <div>
                 <img src="./images/find-replace.svg" alt="find" />
-                <h3>register the words</h3>
+                <h3>listen how to pronounce</h3>
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
