--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </section>
 
       <section class="logo-concept">
-        <h2 class="section-title">Main conept</h2>
+        <h2 class="section-title">Main concept</h2>
         <div>
           <img src="./images/undraw_happy_music_g6wc 1.svg" alt="bird" />
           <p>
@@ -111,7 +111,7 @@
             <div class="content">
               <div>
                 <img src="./images/find-replace.svg" alt="find" />
-                <h3>filter width languages and dialects</h3>
+                <h3>filter with languages and dialects</h3>
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
