change concept sentence

--- a/index.html
+++ b/index.html
@@ -40,17 +40,18 @@
       <section class="main-concept">
         <img src="./images/logo-img-symmetrical.svg" alt="logo" />
         <p>
-          I have studied English words for long time with vocabulary books but
-          it it difficult to remember all of them since vocabulary is too many.
+          Even if you have studied English words for long time with vocabulary
+          books, it is difficult to remember all of them since vocabulary is too
+          many.
         </p>
         <p>
           the example sentences vocabulary books have are sometimes useful , but
           many sentence is not useful in daily conversation.
         </p>
         <p>
-          Sometimes I tried to create my own sentence for each words to memorize
-          easily, but I thought I wish I could see the sentence the native
-          speaker made.
+          Sometimes you might tried to create your own sentence for each words
+          to memorize easily, but you may think you wish you could see the
+          sentence the native speaker made.
         </p>
         <p>this app should help to solve this kind of problem.</p>
       </section>
