--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="content">
               <div>
                 <img src="./images/find-replace.svg" alt="find" />
-                <h3>register the words</h3>
+                <h3>register the words or phrases</h3>
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
